works on most modern browsers

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Face Detection JavaScript</title>
   <link rel="stylesheet" href="style.css">
+  <script src="face-api.min.js" defer></script>
   <script src="script.js" defer></script>
-  <script src="face-api.js" defer></script>
 </head>
 
 <body>
