--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Face Detection JavaScript</title>
-  <link rel="stylesheet" href="style.css">
-  <script src="face-api.min.js" defer></script>
-  <script src="script.js" defer></script>
+  <link rel="stylesheet" href="css/style.css">
+  <script src="javascript/face-api.min.js" defer></script>
+  <script src="javascript/script.js" defer></script>
 </head>
 
 <body>
