modifying to add recognition alongside

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Face Detection JavaScript</title>
   <link rel="stylesheet" href="css/style.css">
   <script src="javascript/face-api.min.js" defer></script>
-  <script src="javascript/script.js" defer></script>
+  <script src="javascript/detection.js" defer></script>
 </head>
 
 <body>
