refactored and added recognition

--- a/detection.html
+++ b/detection.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Face Detection JavaScript</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/detection.css">
   <script src="javascript/face-api.min.js" defer></script>
   <script src="javascript/detection.js" defer></script>
 </head>
